# fastapi_users_service

./: .env.example  Dockerfile  Dockerfile-test  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker.yml  tests.yml
src/: config.py  main.py
src/application/use_cases/: users.py
src/db/: base.py  dependencies.py
src/db/migrations/: env.py
src/db/migrations/versions/: 4e57f5f356bc_.py  5456a01fb32e_inital_commit.py  807ff4a04916_.py  afa9db028953_users.py
src/dependencies/: __init__.py  credentials.py  db.py  users.py
src/dependencies/repositories/: users.py
src/dependencies/security/: password.py  tokens.py
src/dependencies/use_cases/: users.py
src/domain/dtos/: users.py
src/domain/interfaces/repositories/: users.py
src/domain/interfaces/use_cases/: users.py
src/infrastructure/db/users/: orm.py  repositories.py
src/models/: users.py
src/presentation/dependencies/: __init__.py
src/presentation/dependencies/repositories/: users.py
src/presentation/dependencies/use_cases/: users.py
src/presentation/routes/: users.py
src/repositories/: users.py
src/routes/: users.py
src/schemes/: password.py  tokens.py  users.py
src/use_cases/: users.py
src/users/: dependencies.py  models.py  repositories.py  routes.py  schemes.py  use_cases.py
src/users/utils/: enums.py  tokens.py
src/utils/: enums.py  password.py  tokens.py  user.py
src/utils/security/: password.py  tokens.py
tests/fixtures/: app.py  db.py  users.py
tests/integration/: conftest.py
tests/integration/users/: test_login.py  test_user_create.py
tests/utils/: db.py
