[tool.black]
line-length=79
skip-string-normalization=1
extend-exclude='''
(
    \.git
  | \.mypy_cache
  | \.venv
  | postgres_data/
)
'''

[tool.isort]
default_section = "THIRDPARTY" 
known_local_folder = ["src", "db", "dependencies", "models", "repositories", "routes", "schemes", "use_cases", "utils", "tests"]
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"] 
skip = [".gitignore", "venv", "env"] 
multi_line_output = 3
line_length = 79
lines_after_imports = 2
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["bebra_dev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.9"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.10.6"}
dishka = "^1.4.2"
uvicorn = "^0.34.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
freezegun = "^1.5.1"
httpx = "^0.28.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
